docs: normalize release note links

--- a/docs/releases/v0.3.1.md
+++ b/docs/releases/v0.3.1.md
@@ -1,4 +1,4 @@
 ## What's Changed
-* Migrate TUI implementation to Ratatui by @panarch in https://github.com/gluesql/glues/pull/1
+* Migrate TUI implementation to Ratatui by [@panarch](https://github.com/panarch) in [#1](https://github.com/gluesql/glues/pull/1)
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.2.2...v0.3.1
