--- a/docs/releases/v0.4.0.md
+++ b/docs/releases/v0.4.0.md
@@ -25,39 +25,39 @@ Editor Line Number Feature
 
 
 # What's Changed
-* Add toggle line number feature to editor by @panarch in https://github.com/gluesql/glues/pull/6
-* Replace async runtime from async-io to tokio by @panarch in https://github.com/gluesql/glues/pull/7
-* Add MongoDB note data storage support by @panarch in https://github.com/gluesql/glues/pull/8
-* Update editor keymap dialog - remove Ctrl+H by @panarch in https://github.com/gluesql/glues/pull/9
-* Upgrade Ratatui version to 0.29 by @panarch in https://github.com/gluesql/glues/pull/10
-* Add multi-step up/down move support to note tree by @panarch in https://github.com/gluesql/glues/pull/11
-* Split NotebookState::consume into sub modules based on InnerState by @panarch in https://github.com/gluesql/glues/pull/12
-* Prevent root directory removal and renaming by @panarch in https://github.com/gluesql/glues/pull/13
-* Rename Editing{View,Edit}Mode to Editing{Normal,Insert}Mode by @panarch in https://github.com/gluesql/glues/pull/14
-* Add vim normal mode hjkl navigation support to editor by @panarch in https://github.com/gluesql/glues/pull/15
-* Simplify tui/ NotebookContext match codes by @panarch in https://github.com/gluesql/glues/pull/16
-* Simplify tui/ NotebookContext match codes by @panarch in https://github.com/gluesql/glues/pull/17
-* Prevent NumKey step appending overflow by @panarch in https://github.com/gluesql/glues/pull/18
-* Add normal mode b|e|w cursor word move key binding support by @panarch in https://github.com/gluesql/glues/pull/19
-* Update status bar layout: Move description to bottom, keymap to top by @panarch in https://github.com/gluesql/glues/pull/20
-* Change EntryState description by @panarch in https://github.com/gluesql/glues/pull/21
-* Add inserting new line above(O) & below(o) support by @panarch in https://github.com/gluesql/glues/pull/22
-* Add moving cursor to head(0) and end($) key bindings by @panarch in https://github.com/gluesql/glues/pull/23
-* Add entering insert mode key bindings: a, A and I by @panarch in https://github.com/gluesql/glues/pull/24
-* Add G key binding support: cursor to bottom or line number by @panarch in https://github.com/gluesql/glues/pull/25
-* Add gg key binding support: move cursor to top by @panarch in https://github.com/gluesql/glues/pull/26
-* Simplify core/ editing_normal_mode module codes by @panarch in https://github.com/gluesql/glues/pull/27
-* Update storage descriptions, by @panarch in https://github.com/gluesql/glues/pull/28
-* Add normal mode s, S and x key bindings by @panarch in https://github.com/gluesql/glues/pull/29
-* Add caret(^) key binding: move cursor to first non-blank char of the … by @panarch in https://github.com/gluesql/glues/pull/30
-* Add yank(y) and paste(p) key bindings by @panarch in https://github.com/gluesql/glues/pull/31
-* Implement line yank feature and apply to current yank transition by @panarch in https://github.com/gluesql/glues/pull/32
-* Add delete(d) key bindings: delete lines by @panarch in https://github.com/gluesql/glues/pull/33
-* Add undo(u) and redo(Ctrl+r) key bindings by @panarch in https://github.com/gluesql/glues/pull/34
-* Implement visual mode support to editor by @panarch in https://github.com/gluesql/glues/pull/35
-* Update Glues app description - add Vim-inspired by @panarch in https://github.com/gluesql/glues/pull/36
-* Simplify tui/ transitions module codes by @panarch in https://github.com/gluesql/glues/pull/37
-* Add vim keymap dialogs - Ctrl+h to open by @panarch in https://github.com/gluesql/glues/pull/38
+* Add toggle line number feature to editor by [@panarch](https://github.com/panarch) in [#6](https://github.com/gluesql/glues/pull/6)
+* Replace async runtime from async-io to tokio by [@panarch](https://github.com/panarch) in [#7](https://github.com/gluesql/glues/pull/7)
+* Add MongoDB note data storage support by [@panarch](https://github.com/panarch) in [#8](https://github.com/gluesql/glues/pull/8)
+* Update editor keymap dialog - remove Ctrl+H by [@panarch](https://github.com/panarch) in [#9](https://github.com/gluesql/glues/pull/9)
+* Upgrade Ratatui version to 0.29 by [@panarch](https://github.com/panarch) in [#10](https://github.com/gluesql/glues/pull/10)
+* Add multi-step up/down move support to note tree by [@panarch](https://github.com/panarch) in [#11](https://github.com/gluesql/glues/pull/11)
+* Split NotebookState::consume into sub modules based on InnerState by [@panarch](https://github.com/panarch) in [#12](https://github.com/gluesql/glues/pull/12)
+* Prevent root directory removal and renaming by [@panarch](https://github.com/panarch) in [#13](https://github.com/gluesql/glues/pull/13)
+* Rename Editing{View,Edit}Mode to Editing{Normal,Insert}Mode by [@panarch](https://github.com/panarch) in [#14](https://github.com/gluesql/glues/pull/14)
+* Add vim normal mode hjkl navigation support to editor by [@panarch](https://github.com/panarch) in [#15](https://github.com/gluesql/glues/pull/15)
+* Simplify tui/ NotebookContext match codes by [@panarch](https://github.com/panarch) in [#16](https://github.com/gluesql/glues/pull/16)
+* Simplify tui/ NotebookContext match codes by [@panarch](https://github.com/panarch) in [#17](https://github.com/gluesql/glues/pull/17)
+* Prevent NumKey step appending overflow by [@panarch](https://github.com/panarch) in [#18](https://github.com/gluesql/glues/pull/18)
+* Add normal mode b|e|w cursor word move key binding support by [@panarch](https://github.com/panarch) in [#19](https://github.com/gluesql/glues/pull/19)
+* Update status bar layout: Move description to bottom, keymap to top by [@panarch](https://github.com/panarch) in [#20](https://github.com/gluesql/glues/pull/20)
+* Change EntryState description by [@panarch](https://github.com/panarch) in [#21](https://github.com/gluesql/glues/pull/21)
+* Add inserting new line above(O) & below(o) support by [@panarch](https://github.com/panarch) in [#22](https://github.com/gluesql/glues/pull/22)
+* Add moving cursor to head(0) and end($) key bindings by [@panarch](https://github.com/panarch) in [#23](https://github.com/gluesql/glues/pull/23)
+* Add entering insert mode key bindings: a, A and I by [@panarch](https://github.com/panarch) in [#24](https://github.com/gluesql/glues/pull/24)
+* Add G key binding support: cursor to bottom or line number by [@panarch](https://github.com/panarch) in [#25](https://github.com/gluesql/glues/pull/25)
+* Add gg key binding support: move cursor to top by [@panarch](https://github.com/panarch) in [#26](https://github.com/gluesql/glues/pull/26)
+* Simplify core/ editing_normal_mode module codes by [@panarch](https://github.com/panarch) in [#27](https://github.com/gluesql/glues/pull/27)
+* Update storage descriptions, by [@panarch](https://github.com/panarch) in [#28](https://github.com/gluesql/glues/pull/28)
+* Add normal mode s, S and x key bindings by [@panarch](https://github.com/panarch) in [#29](https://github.com/gluesql/glues/pull/29)
+* Add caret(^) key binding: move cursor to first non-blank char of the … by [@panarch](https://github.com/panarch) in [#30](https://github.com/gluesql/glues/pull/30)
+* Add yank(y) and paste(p) key bindings by [@panarch](https://github.com/panarch) in [#31](https://github.com/gluesql/glues/pull/31)
+* Implement line yank feature and apply to current yank transition by [@panarch](https://github.com/panarch) in [#32](https://github.com/gluesql/glues/pull/32)
+* Add delete(d) key bindings: delete lines by [@panarch](https://github.com/panarch) in [#33](https://github.com/gluesql/glues/pull/33)
+* Add undo(u) and redo(Ctrl+r) key bindings by [@panarch](https://github.com/panarch) in [#34](https://github.com/gluesql/glues/pull/34)
+* Implement visual mode support to editor by [@panarch](https://github.com/panarch) in [#35](https://github.com/gluesql/glues/pull/35)
+* Update Glues app description - add Vim-inspired by [@panarch](https://github.com/panarch) in [#36](https://github.com/gluesql/glues/pull/36)
+* Simplify tui/ transitions module codes by [@panarch](https://github.com/panarch) in [#37](https://github.com/gluesql/glues/pull/37)
+* Add vim keymap dialogs - Ctrl+h to open by [@panarch](https://github.com/panarch) in [#38](https://github.com/gluesql/glues/pull/38)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.3.2...v0.4.0
