--- a/docs/releases/v0.5.0.md
+++ b/docs/releases/v0.5.0.md
@@ -42,29 +42,29 @@ Yank Sharing: Yank text is now preserved across notes within a NotebookContext, 
 Note Management: Fixed the issue where note tree numbering was reset upon certain key inputs (j, k etc.). Also, the rename prompt now shows the current name as the default value for easier editing.
 
 ## What's Changed
-* Add AUR instructions to README.md by @orhun in https://github.com/gluesql/glues/pull/39
-* Remove redundant context state management in tui/, by @panarch in https://github.com/gluesql/glues/pull/40
-* Add vim normal delete inside mode - support diw and {n}diw by @panarch in https://github.com/gluesql/glues/pull/41
-* Add {n}d{n2}iw command support - e.g. 3d10iw by @panarch in https://github.com/gluesql/glues/pull/42
-* Add change mode(c) support to vim normal mode by @panarch in https://github.com/gluesql/glues/pull/43
-* Update VimKeymap dialog to calc height automatically by @panarch in https://github.com/gluesql/glues/pull/44
-* Add vim normal change2 mode {n1}c{n2} - 3c20, 2c3, .. by @panarch in https://github.com/gluesql/glues/pull/45
-* Add delete to line start support - d0 by @panarch in https://github.com/gluesql/glues/pull/46
-* Add change inside mode support - ciw, 3ciw 3c2iw, .. by @panarch in https://github.com/gluesql/glues/pull/47
-* Add d$ (delete to line end) support by @panarch in https://github.com/gluesql/glues/pull/48
-* Change open note key binding from 'o' to 'l', by @panarch in https://github.com/gluesql/glues/pull/49
-* Add toggle-note-browser feature to normal mode, by @panarch in https://github.com/gluesql/glues/pull/50
-* Keep yank text across notes in NotebookContext by @panarch in https://github.com/gluesql/glues/pull/51
-* Fix note tree numbering reset on j,k and other key inputs by @panarch in https://github.com/gluesql/glues/pull/52
-* Update rename prompt to show current name as default value by @panarch in https://github.com/gluesql/glues/pull/53
-* Implement editor tabs functionality, by @panarch in https://github.com/gluesql/glues/pull/54
-* Run db::update_note_content only if content changed by @panarch in https://github.com/gluesql/glues/pull/55
-* Hide change mode in top level shortcuts by @panarch in https://github.com/gluesql/glues/pull/56
-* Fix editor to save note on vim modal changes, by @panarch in https://github.com/gluesql/glues/pull/57
-* Fix yank sharing across tabs by @panarch in https://github.com/gluesql/glues/pull/58
-* Update core note::update_content not to return None transition by @panarch in https://github.com/gluesql/glues/pull/59
+* Add AUR instructions to README.md by [@orhun](https://github.com/orhun) in [#39](https://github.com/gluesql/glues/pull/39)
+* Remove redundant context state management in tui/, by [@panarch](https://github.com/panarch) in [#40](https://github.com/gluesql/glues/pull/40)
+* Add vim normal delete inside mode - support diw and {n}diw by [@panarch](https://github.com/panarch) in [#41](https://github.com/gluesql/glues/pull/41)
+* Add {n}d{n2}iw command support - e.g. 3d10iw by [@panarch](https://github.com/panarch) in [#42](https://github.com/gluesql/glues/pull/42)
+* Add change mode(c) support to vim normal mode by [@panarch](https://github.com/panarch) in [#43](https://github.com/gluesql/glues/pull/43)
+* Update VimKeymap dialog to calc height automatically by [@panarch](https://github.com/panarch) in [#44](https://github.com/gluesql/glues/pull/44)
+* Add vim normal change2 mode {n1}c{n2} - 3c20, 2c3, .. by [@panarch](https://github.com/panarch) in [#45](https://github.com/gluesql/glues/pull/45)
+* Add delete to line start support - d0 by [@panarch](https://github.com/panarch) in [#46](https://github.com/gluesql/glues/pull/46)
+* Add change inside mode support - ciw, 3ciw 3c2iw, .. by [@panarch](https://github.com/panarch) in [#47](https://github.com/gluesql/glues/pull/47)
+* Add d$ (delete to line end) support by [@panarch](https://github.com/panarch) in [#48](https://github.com/gluesql/glues/pull/48)
+* Change open note key binding from 'o' to 'l', by [@panarch](https://github.com/panarch) in [#49](https://github.com/gluesql/glues/pull/49)
+* Add toggle-note-browser feature to normal mode, by [@panarch](https://github.com/panarch) in [#50](https://github.com/gluesql/glues/pull/50)
+* Keep yank text across notes in NotebookContext by [@panarch](https://github.com/panarch) in [#51](https://github.com/gluesql/glues/pull/51)
+* Fix note tree numbering reset on j,k and other key inputs by [@panarch](https://github.com/panarch) in [#52](https://github.com/gluesql/glues/pull/52)
+* Update rename prompt to show current name as default value by [@panarch](https://github.com/panarch) in [#53](https://github.com/gluesql/glues/pull/53)
+* Implement editor tabs functionality, by [@panarch](https://github.com/panarch) in [#54](https://github.com/gluesql/glues/pull/54)
+* Run db::update_note_content only if content changed by [@panarch](https://github.com/panarch) in [#55](https://github.com/gluesql/glues/pull/55)
+* Hide change mode in top level shortcuts by [@panarch](https://github.com/panarch) in [#56](https://github.com/gluesql/glues/pull/56)
+* Fix editor to save note on vim modal changes, by [@panarch](https://github.com/panarch) in [#57](https://github.com/gluesql/glues/pull/57)
+* Fix yank sharing across tabs by [@panarch](https://github.com/panarch) in [#58](https://github.com/gluesql/glues/pull/58)
+* Update core note::update_content not to return None transition by [@panarch](https://github.com/panarch) in [#59](https://github.com/gluesql/glues/pull/59)
 
 ## New Contributors
-* @orhun made their first contribution in https://github.com/gluesql/glues/pull/39
+* [@orhun](https://github.com/orhun) made their first contribution in [#39](https://github.com/gluesql/glues/pull/39)
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.4.0...v0.5.0
