--- a/docs/releases/v0.5.3.md
+++ b/docs/releases/v0.5.3.md
@@ -1,9 +1,9 @@
 ## What's Changed
-* Add {n}d{n2}$ support - 3d2$, d4$, .. by @panarch in https://github.com/gluesql/glues/pull/83
-* Add de & db support to delete2 mode - 3d2e, d4b, .. by @panarch in https://github.com/gluesql/glues/pull/84
-* Update gluesql version to v0.16.3 by @panarch in https://github.com/gluesql/glues/pull/85
-* Bump gluesql-mongo-storage version to 0.16.3 by @panarch in https://github.com/gluesql/glues/pull/86
-* Add z scroll support - zz, zt and zb by @panarch in https://github.com/gluesql/glues/pull/87
+* Add {n}d{n2}$ support - 3d2$, d4$, .. by [@panarch](https://github.com/panarch) in [#83](https://github.com/gluesql/glues/pull/83)
+* Add de & db support to delete2 mode - 3d2e, d4b, .. by [@panarch](https://github.com/panarch) in [#84](https://github.com/gluesql/glues/pull/84)
+* Update gluesql version to v0.16.3 by [@panarch](https://github.com/panarch) in [#85](https://github.com/gluesql/glues/pull/85)
+* Bump gluesql-mongo-storage version to 0.16.3 by [@panarch](https://github.com/panarch) in [#86](https://github.com/gluesql/glues/pull/86)
+* Add z scroll support - zz, zt and zb by [@panarch](https://github.com/panarch) in [#87](https://github.com/gluesql/glues/pull/87)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.5.2...v0.5.3
