--- a/docs/releases/v0.5.5.md
+++ b/docs/releases/v0.5.5.md
@@ -1,5 +1,5 @@
 ## What's Changed
-* Implement note & directory move functionality by @panarch in https://github.com/gluesql/glues/pull/94
+* Implement note & directory move functionality by [@panarch](https://github.com/panarch) in [#94](https://github.com/gluesql/glues/pull/94)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.5.4...v0.5.5
