--- a/docs/releases/v0.6.2.md
+++ b/docs/releases/v0.6.2.md
@@ -1,6 +1,6 @@
 ## What's Changed
-* Add NoteTree select next(J) & prev(K) directory by @panarch in https://github.com/gluesql/glues/pull/128
-* Fix keymap dialog not updating live with current TUI state by @panarch in https://github.com/gluesql/glues/pull/129
+* Add NoteTree select next(J) & prev(K) directory by [@panarch](https://github.com/panarch) in [#128](https://github.com/gluesql/glues/pull/128)
+* Fix keymap dialog not updating live with current TUI state by [@panarch](https://github.com/panarch) in [#129](https://github.com/gluesql/glues/pull/129)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.6.1...v0.6.2
