--- a/docs/releases/v0.3.2.md
+++ b/docs/releases/v0.3.2.md
@@ -1,5 +1,5 @@
 ## What's Changed
-* Enable Link-Time Optimization for release build by @panarch in https://github.com/gluesql/glues/pull/5
+* Enable Link-Time Optimization for release build by [@panarch](https://github.com/panarch) in [#5](https://github.com/gluesql/glues/pull/5)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.3.1...v0.3.2
