--- a/docs/releases/v0.6.0.md
+++ b/docs/releases/v0.6.0.md
@@ -37,28 +37,28 @@ Hope you find these changes helpful! I’m loving it so far and will keep improv
 
 
 ## What's Changed
-* Fix note rename to apply changes to open tabs in TUI by @panarch in https://github.com/gluesql/glues/pull/96
-* Implement breadcrumb support in tui editor by @panarch in https://github.com/gluesql/glues/pull/97
-* Update tui/ editor to show vim mode at bottom left corner by @panarch in https://github.com/gluesql/glues/pull/98
-* Remove surrounding borders in note tree & editor and leave only divid… by @panarch in https://github.com/gluesql/glues/pull/99
-* Remove square bracket uses in editor tab rendering by @panarch in https://github.com/gluesql/glues/pull/100
-* Apply Nerd Font icons to NoteTree by @panarch in https://github.com/gluesql/glues/pull/101
-* Apply NerdFont to editor - tabs & bottom right status message by @panarch in https://github.com/gluesql/glues/pull/102
-* Add tab close mode with closing all right tabs by @panarch in https://github.com/gluesql/glues/pull/103
-* Add closing all left tabs (normal mode - tXh) by @panarch in https://github.com/gluesql/glues/pull/104
-* Change NoteTree icon colors - directory to yellow & note to dimmed by @panarch in https://github.com/gluesql/glues/pull/105
-* Replace colors - named ANSI colors to other indexed colors by @panarch in https://github.com/gluesql/glues/pull/106
-* Move tab management including breadcrumb from tui/ to core/ by @panarch in https://github.com/gluesql/glues/pull/107
-* Add logger to core module by @panarch in https://github.com/gluesql/glues/pull/108
-* Make editor breadcrumb look better by @panarch in https://github.com/gluesql/glues/pull/109
-* Update rust-toolchain rust version to 1.84 by @panarch in https://github.com/gluesql/glues/pull/110
-* Update editor yank to set OS clipboard by @panarch in https://github.com/gluesql/glues/pull/111
-* Update editor 'Saving...' bottom-right label design by @panarch in https://github.com/gluesql/glues/pull/112
-* Hide Vim mode label in editor if no tabs open by @panarch in https://github.com/gluesql/glues/pull/113
-* Fix 'a' behavior in Vim normal mode to stop at line end by @panarch in https://github.com/gluesql/glues/pull/114
-* Split tui/transitions.rs into sub modules by @panarch in https://github.com/gluesql/glues/pull/115
-* Implement Keymap side panel UI/UX by @panarch in https://github.com/gluesql/glues/pull/116
-* Release v0.6.0 by @panarch in https://github.com/gluesql/glues/pull/117
+* Fix note rename to apply changes to open tabs in TUI by [@panarch](https://github.com/panarch) in [#96](https://github.com/gluesql/glues/pull/96)
+* Implement breadcrumb support in tui editor by [@panarch](https://github.com/panarch) in [#97](https://github.com/gluesql/glues/pull/97)
+* Update tui/ editor to show vim mode at bottom left corner by [@panarch](https://github.com/panarch) in [#98](https://github.com/gluesql/glues/pull/98)
+* Remove surrounding borders in note tree & editor and leave only divid… by [@panarch](https://github.com/panarch) in [#99](https://github.com/gluesql/glues/pull/99)
+* Remove square bracket uses in editor tab rendering by [@panarch](https://github.com/panarch) in [#100](https://github.com/gluesql/glues/pull/100)
+* Apply Nerd Font icons to NoteTree by [@panarch](https://github.com/panarch) in [#101](https://github.com/gluesql/glues/pull/101)
+* Apply NerdFont to editor - tabs & bottom right status message by [@panarch](https://github.com/panarch) in [#102](https://github.com/gluesql/glues/pull/102)
+* Add tab close mode with closing all right tabs by [@panarch](https://github.com/panarch) in [#103](https://github.com/gluesql/glues/pull/103)
+* Add closing all left tabs (normal mode - tXh) by [@panarch](https://github.com/panarch) in [#104](https://github.com/gluesql/glues/pull/104)
+* Change NoteTree icon colors - directory to yellow & note to dimmed by [@panarch](https://github.com/panarch) in [#105](https://github.com/gluesql/glues/pull/105)
+* Replace colors - named ANSI colors to other indexed colors by [@panarch](https://github.com/panarch) in [#106](https://github.com/gluesql/glues/pull/106)
+* Move tab management including breadcrumb from tui/ to core/ by [@panarch](https://github.com/panarch) in [#107](https://github.com/gluesql/glues/pull/107)
+* Add logger to core module by [@panarch](https://github.com/panarch) in [#108](https://github.com/gluesql/glues/pull/108)
+* Make editor breadcrumb look better by [@panarch](https://github.com/panarch) in [#109](https://github.com/gluesql/glues/pull/109)
+* Update rust-toolchain rust version to 1.84 by [@panarch](https://github.com/panarch) in [#110](https://github.com/gluesql/glues/pull/110)
+* Update editor yank to set OS clipboard by [@panarch](https://github.com/panarch) in [#111](https://github.com/gluesql/glues/pull/111)
+* Update editor 'Saving...' bottom-right label design by [@panarch](https://github.com/panarch) in [#112](https://github.com/gluesql/glues/pull/112)
+* Hide Vim mode label in editor if no tabs open by [@panarch](https://github.com/panarch) in [#113](https://github.com/gluesql/glues/pull/113)
+* Fix 'a' behavior in Vim normal mode to stop at line end by [@panarch](https://github.com/panarch) in [#114](https://github.com/gluesql/glues/pull/114)
+* Split tui/transitions.rs into sub modules by [@panarch](https://github.com/panarch) in [#115](https://github.com/gluesql/glues/pull/115)
+* Implement Keymap side panel UI/UX by [@panarch](https://github.com/panarch) in [#116](https://github.com/gluesql/glues/pull/116)
+* Release v0.6.0 by [@panarch](https://github.com/panarch) in [#117](https://github.com/gluesql/glues/pull/117)
 
 
 **Full Changelog**: https://github.com/gluesql/glues/compare/v0.5.5...v0.6.0
