--- a/docs/releases/v0.6.3.md
+++ b/docs/releases/v0.6.3.md
@@ -1,11 +1,11 @@
 ## What's Changed
-* Leave gateway mode on inedible key events by @panarch in https://github.com/gluesql/glues/pull/132
-* Clarify add failure messages by @panarch in https://github.com/gluesql/glues/pull/133
-* Add missing delete mode shortcuts by @panarch in https://github.com/gluesql/glues/pull/134
-* Support row deletion using j & k shortcuts by @panarch in https://github.com/gluesql/glues/pull/135
-* Rename shortcuts method to keymap by @panarch in https://github.com/gluesql/glues/pull/136
-* Fix shortcut keys for Git and MongoDB selection in entry menu by @panarch in https://github.com/gluesql/glues/pull/137
-* Improve grammar in the path creation prompt by @panarch in https://github.com/gluesql/glues/pull/138
+* Leave gateway mode on inedible key events by [@panarch](https://github.com/panarch) in [#132](https://github.com/gluesql/glues/pull/132)
+* Clarify add failure messages by [@panarch](https://github.com/panarch) in [#133](https://github.com/gluesql/glues/pull/133)
+* Add missing delete mode shortcuts by [@panarch](https://github.com/panarch) in [#134](https://github.com/gluesql/glues/pull/134)
+* Support row deletion using j & k shortcuts by [@panarch](https://github.com/panarch) in [#135](https://github.com/gluesql/glues/pull/135)
+* Rename shortcuts method to keymap by [@panarch](https://github.com/panarch) in [#136](https://github.com/gluesql/glues/pull/136)
+* Fix shortcut keys for Git and MongoDB selection in entry menu by [@panarch](https://github.com/panarch) in [#137](https://github.com/gluesql/glues/pull/137)
+* Improve grammar in the path creation prompt by [@panarch](https://github.com/panarch) in [#138](https://github.com/gluesql/glues/pull/138)
 
 
 
