docs: mention ratzilla 0.2 in v0.8.0 notes

--- a/docs/releases/v0.8.0.md
+++ b/docs/releases/v0.8.0.md
@@ -9,8 +9,8 @@ Glues now ships a first-class web build powered by [Ratzilla](https://github.com
 
 - Added a dedicated `tui/web` target and documented the `trunk serve --release` workflow plus a hosted demo link.
 - The web entry menu now offers Instant, IndexedDB (with namespace prompt), and Proxy backends, persisting selections across sessions.
-- Browser builds gained clipboard sync for yank operations, smoother font and IME handling, and IndexedDB help inside the in-app guide.
-  **PRs:** [#215](https://github.com/gluesql/glues/pull/215), [#222](https://github.com/gluesql/glues/pull/222), [#231](https://github.com/gluesql/glues/pull/231), [#216](https://github.com/gluesql/glues/pull/216), [#217](https://github.com/gluesql/glues/pull/217), [#236](https://github.com/gluesql/glues/pull/236), [#232](https://github.com/gluesql/glues/pull/232), [#239](https://github.com/gluesql/glues/pull/239), [#237](https://github.com/gluesql/glues/pull/237)
+- Browser builds gained clipboard sync for yank operations, smoother font and IME handling, IndexedDB help inside the in-app guide, and the latest Ratzilla 0.2 runtime.
+  **PRs:** [#215](https://github.com/gluesql/glues/pull/215), [#222](https://github.com/gluesql/glues/pull/222), [#231](https://github.com/gluesql/glues/pull/231), [#216](https://github.com/gluesql/glues/pull/216), [#217](https://github.com/gluesql/glues/pull/217), [#236](https://github.com/gluesql/glues/pull/236), [#232](https://github.com/gluesql/glues/pull/232), [#239](https://github.com/gluesql/glues/pull/239), [#237](https://github.com/gluesql/glues/pull/237), [#251](https://github.com/gluesql/glues/pull/251)
 > _Screenshot: Browser entry screen showing Instant / IndexedDB / Proxy choices with the namespace prompt._
 
 ### Secure Remote Proxy and Tokens
