docs: add v0.8.0 release screenshots

--- a/docs/releases/v0.8.0.md
+++ b/docs/releases/v0.8.0.md
@@ -11,7 +11,6 @@ Glues now ships a first-class web build powered by [Ratzilla](https://github.com
 - The web entry menu now offers Instant, IndexedDB (with namespace prompt), and Proxy backends, persisting selections across sessions.
 - Browser builds gained clipboard sync for yank operations, smoother font and IME handling, IndexedDB help inside the in-app guide, and the latest Ratzilla 0.2 runtime.
   **PRs:** [#215](https://github.com/gluesql/glues/pull/215), [#222](https://github.com/gluesql/glues/pull/222), [#231](https://github.com/gluesql/glues/pull/231), [#216](https://github.com/gluesql/glues/pull/216), [#217](https://github.com/gluesql/glues/pull/217), [#236](https://github.com/gluesql/glues/pull/236), [#232](https://github.com/gluesql/glues/pull/232), [#239](https://github.com/gluesql/glues/pull/239), [#237](https://github.com/gluesql/glues/pull/237), [#251](https://github.com/gluesql/glues/pull/251)
-> _Screenshot: Browser entry screen showing Instant / IndexedDB / Proxy choices with the namespace prompt._
 
 ### Secure Remote Proxy and Tokens
 Remote-first workflows are now much easier to host and lock down.
@@ -20,7 +19,8 @@ Remote-first workflows are now much easier to host and lock down.
 - Added a Proxy option to the entry menu that remembers the last URL and guides users through connecting from both native and web builds.
 - Optional bearer-token authentication protects remote proxy instances, with masked input and clear warnings when a token is not configured.
   **PRs:** [#213](https://github.com/gluesql/glues/pull/213), [#240](https://github.com/gluesql/glues/pull/240)
-> _Screenshot: Proxy connection flow showing the URL prompt followed by the masked token dialog._
+
+![Proxy connection dialog prompting for the backend URL before the optional token step](assets/v0.8.0_proxy_dialog.png)
 
 ### Runtime Theme Switching and Visual Polish
 Themes can now be explored live without restarting, and the UI picks up several contrast improvements.
@@ -29,7 +29,8 @@ Themes can now be explored live without restarting, and the UI picks up several 
 - Retired the CLI `--theme` flag in favor of the runtime selector, refreshed the Pastel palette, and aligned icons and selections with theme accents.
 - Improved inactive tree highlights so unfocused panes remain legible.
   **PRs:** [#219](https://github.com/gluesql/glues/pull/219), [#225](https://github.com/gluesql/glues/pull/225), [#224](https://github.com/gluesql/glues/pull/224), [#229](https://github.com/gluesql/glues/pull/229), [#230](https://github.com/gluesql/glues/pull/230), [#248](https://github.com/gluesql/glues/pull/248)
-> _Screenshot: Theme dialog open after switching to the refreshed Pastel palette, highlighting live preview._
+
+![Workspace view with the theme dialog open, keymap overlay visible, and the note tree alongside the editor](assets/v0.8.0_workspace.png)
 
 ### redb Storage Backend
 For local notebooks that should live in a single portable file, Glues now supports [redb](https://github.com/cberner/redb).
@@ -37,7 +38,8 @@ For local notebooks that should live in a single portable file, Glues now suppor
 - Added a `redb` option to the entry menu with persisted path prompts and matching snapshots.
 - Documented how the backend fits alongside Instant, Local, Git, MongoDB, and Proxy storage.
   **PR:** [#235](https://github.com/gluesql/glues/pull/235)
-> _Screenshot: Entry menu highlighting the new `redb` option with the last-used path pre-filled._
+
+![Entry menu highlighting the new redb storage option with the last-used path pre-filled](assets/v0.8.0_menu.png)
 
 ## 🛠 Other Improvements
 
